# tars

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TODO.md  blackboard_5rounds.json  example.py  report_5rounds.md  selfplay_5rounds.txt  selfplay_log.txt
crates/tars-bedrock/: Cargo.toml
crates/tars-bedrock/src/: client.rs  document.rs  error.rs  lib.rs  mapping.rs  stream.rs
crates/tars-cache/: Cargo.toml
crates/tars-cache/src/: clock.rs  error.rs  key.rs  lib.rs  policy.rs  registry.rs  sqlite.rs
crates/tars-cli/: Cargo.toml
crates/tars-cli/examples/: cassette_from_events.rs
crates/tars-cli/src/: bench.rs  config_loader.rs  dispatch.rs  eval.rs  event_store.rs  events.rs  init.rs  main.rs  model_library.rs  model_query.rs  models.rs  plan.rs  probe.rs  providers_cmd.rs  run.rs  run_report.rs  run_task.rs  trajectory.rs
crates/tars-config/: Cargo.toml
crates/tars-config/data/: models.toml  provider.toml
crates/tars-config/src/: builtin.rs  error.rs  global.rs  lib.rs  manager.rs  model_kb.rs  paths.rs  providers.rs  resilience.rs  roles.rs  routing.rs  sandbox.rs  web_search.rs
crates/tars-config/tests/: resolve_home_env.rs
crates/tars-desktop/: Cargo.toml
crates/tars-desktop-app/: Cargo.toml  build.rs  tauri.conf.json
crates/tars-desktop-app/capabilities/: default.json
crates/tars-desktop-app/frontend/: app.js  index.html  style.css
crates/tars-desktop-app/src/: main.rs
crates/tars-desktop/src/: lib.rs
crates/tars-durable/: Cargo.toml
crates/tars-durable/src/: error.rs  lib.rs  scheduler.rs  store.rs
crates/tars-durable/tests/: durable.rs
crates/tars-handle/: Cargo.toml
crates/tars-handle/src/: error.rs  handle.rs  lib.rs  paths.rs  resilience.rs  roles.rs  startup.rs
crates/tars-handle/tests/: handle.rs  sole_provider.rs  store_tars_home.rs  unknown_role.rs
crates/tars-melt/: Cargo.toml
crates/tars-melt/src/: lib.rs  metrics.rs  otlp.rs
crates/tars-melt/src/event/: mod.rs  (+2 more)
crates/tars-model/: Cargo.toml
crates/tars-model/src/: agent.rs  context.rs  ids.rs  lib.rs  role.rs  skill.rs  task.rs
crates/tars-node/: .gitignore  Cargo.toml  README.md  RELEASE.md  build.rs  index.d.ts  index.js  package-lock.json  package.json
crates/tars-node/__test__/: ab_cassette.test.mjs  handle.test.mjs  smoke.mjs  unknown_role.test.mjs
crates/tars-node/src/: ctx.rs  errors.rs  handle.rs  lib.rs
crates/tars-pipeline/: Cargo.toml
crates/tars-pipeline/src/: budget.rs  cache.rs  circuit_breaker.rs  event_emitter.rs  fallback.rs  latency_stats.rs  lib.rs  middleware.rs  retry.rs  routing.rs  service.rs  telemetry.rs  tenant_budget.rs  validation.rs
crates/tars-pipeline/tests/: integration.rs  refactor_e2e.rs
crates/tars-provider/: Cargo.toml
crates/tars-provider/src/: auth.rs  batch.rs  builder_macros.rs  child_reaper.rs  global.rs  http_base.rs  lib.rs  provider.rs  registry.rs  schema_adapt.rs  subprocess_diagnostics.rs  tool_buffer.rs  transport.rs
crates/tars-provider/tests/: ab_cassette.rs  anthropic_batch_integration.rs  anthropic_integration.rs  claude_cli_smoke.rs  codex_cli_smoke.rs  conformance.rs  gemini_batch_integration.rs  gemini_cli_smoke.rs  gemini_integration.rs  http_deadline.rs  openai_batch_integration.rs  openai_integration.rs  security_delegate_cli.rs  security_delegate_cli_default_confine.rs
crates/tars-py/: Cargo.toml  README.md  build.rs  pyproject.toml
crates/tars-py/.cargo/: config.toml
crates/tars-py/src/: context.rs  errors.rs  eval.rs  handle.rs  lib.rs  session.rs  validation.rs
crates/tars-runtime/: Cargo.toml
crates/tars-runtime/examples/: multi_step_with_tools.rs  non_llm_plan.rs
crates/tars-runtime/src/: agent.rs  arg_judge.rs  bind.rs  check.rs  critic.rs  ensemble_agent.rs  error.rs  event.rs  executor.rs  judge.rs  lib.rs  llm_adapters.rs  message.rs  metamorphic.rs  native_agent.rs  orchestrator.rs  prompt.rs  run_report.rs  runtime.rs  session.rs  sync.rs  tars_agent.rs  task.rs  trajectory_match.rs  worker.rs
crates/tars-runtime/tests/: agent_step.rs  critic_verdict.rs  dependency_scheduling.rs  durable.rs  infra_retry.rs  native_agent.rs  orchestrator_plan.rs  recovery.rs  run_task.rs  security_native_agent.rs  session_worker_tool_parity.rs  tars_agent.rs  worker_crash_timeout.rs  worker_with_tools.rs
crates/tars-sandbox/: Cargo.toml
crates/tars-sandbox/src/: lib.rs
crates/tars-sandbox/tests/: sandbox_jail.rs
crates/tars-server/: Cargo.toml
crates/tars-server/src/: lib.rs  main.rs
crates/tars-server/tests/: api.rs
crates/tars-storage/: Cargo.toml
crates/tars-storage/examples/: blackboard_demo.rs
crates/tars-storage/src/: agent_event_log.rs  body_store.rs  durable_store.rs  error.rs  event_store.rs  lib.rs  pipeline_event_store.rs  sqlite.rs
crates/tars-tools/: Cargo.toml
crates/tars-tools/src/: approval.rs  lib.rs  permission.rs  registry.rs  sandbox.rs  tool.rs
crates/tars-tui/: Cargo.toml  NOTICE
crates/tars-tui/src/: main.rs
crates/tars-types/: Cargo.toml
crates/tars-types/src/: auth.rs  batch.rs  bless.rs  cache.rs  capabilities.rs  chat.rs  content_ref.rs  context.rs  env.rs  error.rs  events.rs  http_extras.rs  ids.rs  json_decode.rs  judge.rs  lib.rs  model.rs  pipeline_events.rs  principal.rs  response.rs  run_context.rs  run_report.rs  schema.rs  secret.rs  telemetry.rs  tools.rs  usage.rs  validation.rs
crates/tars-types/tests/: provider_error_kind_wire.rs
crates/tars-utils/: Cargo.toml
crates/tars-utils/src/: json_decode.rs  lib.rs
examples/: Cargo.toml  tars.toml
examples/bless/: severity.bless.json
examples/cassettes/: eval.cassette.json  schema-validation.cassette.json
examples/eval-corpus/bug-severity/: input.txt  system.txt
examples/eval-corpus/null-deref/: input.txt
examples/examples/: multi_step_with_tools.rs  non_llm_plan.rs
examples/examples/testing/: main.rs
examples/node/: schema-validation.mjs
examples/python/: README.md
examples/python/ab-testing/: code_change_ab.py
examples/python/agent-engine-proto/: engine.py  types.py
examples/src/: lib.rs
(+311 files in other folders)
