[workspace]
resolver = "2"
members = [
    "crates/tars-types",
    "crates/tars-config",
    "crates/tars-provider",
    "crates/tars-pipeline",
    "crates/tars-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["TARS Team"]
repository = "https://github.com/moomoo-tech/tars"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "process"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"
pin-project-lite = "0.2"
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
figment = { version = "0.10", features = ["toml", "env"] }

# HTTP / SSE
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
eventsource-stream = "0.2"
url = { version = "2", features = ["serde"] }

# Errors
thiserror = "1"

# Tracing (instrumentation only — full MELT stack later)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# CLI
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
anyhow = "1"
dirs = "5"

# Time
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }

# Crypto / hash
sha2 = "0.10"

# Test deps
wiremock = "0.6"
tokio-test = "0.4"
mockall = "0.13"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# Production-grade defaults; loosen per-crate if needed.
all = { level = "warn", priority = -1 }
