[workspace]
resolver = "2"
members = [
    "crates/tars-types",
    "crates/tars-sandbox",
    "crates/tars-model",
    "crates/tars-config",
    "crates/tars-provider",
    "crates/tars-bedrock",
    "crates/tars-pipeline",
    "crates/tars-cache",
    "crates/tars-melt",
    "crates/tars-storage",
    "crates/tars-runtime",
    "crates/tars-handle",
    "crates/tars-tools",
    "crates/tars-cli",
    "crates/tars-desktop",
    "crates/tars-desktop-app",
    "crates/tars-server",
    "crates/tars-py",
    "crates/tars-node",
]
# tars-py is a PyO3 cdylib — `cargo build` can't link it without a
# Python interpreter on the link line. Exclude from default builds so
# `cargo build --workspace` / `cargo test --workspace` keep working;
# build it explicitly via `maturin develop` / `maturin build` from
# inside the crate dir.
#
# tars-node is also a cdylib (.node native addon for Node.js) but is
# linkable by plain cargo — napi-build's `setup()` writes the symbol
# shims via build.rs without needing an external SDK on the link
# line. So it stays IN default-members; `cargo build --workspace`
# produces a `libtars_node.{dylib,so}` you can rename → `.node` and
# import. The `napi build` script in package.json wraps that into
# the platform-tagged artifact + index.js / index.d.ts for npm.
default-members = [
    "crates/tars-types",
    "crates/tars-sandbox",
    "crates/tars-config",
    "crates/tars-provider",
    "crates/tars-pipeline",
    "crates/tars-cache",
    "crates/tars-melt",
    "crates/tars-storage",
    "crates/tars-runtime",
    "crates/tars-handle",
    "crates/tars-tools",
    "crates/tars-cli",
    "crates/tars-desktop",
    "crates/tars-node",
]

[workspace.package]
version = "1.2.2"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["TARS Team"]
repository = "https://github.com/leocaolab/tars"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "process"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"
pin-project-lite = "0.2"
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
figment = { version = "0.10", features = ["toml", "env"] }

# HTTP / SSE
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "multipart"] }
eventsource-stream = "0.2"
url = { version = "2", features = ["serde"] }

# Errors
thiserror = "1"

# Tracing (instrumentation only — full MELT stack later)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# CLI
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
anyhow = "1"
# HTTP server (tars-server). Pinned to the 0.7 line already resolved in
# the lockfile (transitive) to avoid a second axum major in the tree.
axum = "0.7"
dirs = "5"

# Time
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }

# Crypto / hash
sha2 = "0.10"
# UUID — used by tars-runtime for new TrajectoryId generation.
# v4 (random) is the right shape: no clock dependency, no MAC leak.
uuid = { version = "1", features = ["v4", "serde"] }

# Cache
moka = { version = "0.12", features = ["future"] }

# SQLite (cache L2, future event store, content store)
rusqlite = { version = "0.32", features = ["bundled", "blob"] }

# Test deps
wiremock = "0.6"
tokio-test = "0.4"
mockall = "0.13"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# Production-grade defaults; loosen per-crate if needed.
all = { level = "warn", priority = -1 }
