[package]
name = "tars-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Declarative configuration for TARS Runtime (Doc 06)"

[lints]
workspace = true

[dependencies]
tars-types = { path = "../tars-types" }

serde.workspace = true
serde_json.workspace = true
toml.workspace = true
figment.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile = "3"
