[package]
name = "tars-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Declarative configuration for TARS Runtime (Doc 06)"

[lints]
workspace = true

[dependencies]
tars-types = { path = "../tars-types" }
tars-sandbox = { path = "../tars-sandbox" }

# Web-search config schema is OWNED by sisurf (`SearchConfig`) — tars
# deserializes the `[web_search]` TOML section into it and injects the
# env-resolved API key, but never redeclares the schema. Sibling path dep.
sisurf-core = { git = "https://github.com/leocaolab/sisurf", tag = "v0.3.0" }

serde.workspace = true
serde_json.workspace = true
toml.workspace = true
figment.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile = "3"
