[package]
name = "tars-handle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "The `Tars` per-scope runtime handle (Doc 06 §6 C3) — binds the global registry + workspace roles + observability sink + cancellation into one entry."

[lints]
workspace = true

[dependencies]
tars-types = { path = "../tars-types" }
tars-config = { path = "../tars-config" }
tars-provider = { path = "../tars-provider" }
tars-pipeline = { path = "../tars-pipeline" }
tars-runtime = { path = "../tars-runtime" }
tars-storage = { path = "../tars-storage" }

serde.workspace = true
toml.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tracing.workspace = true
sha2.workspace = true

[dev-dependencies]
tokio.workspace = true
tempfile = "3"
