[package]
name = "tars-handle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "tars composition-root facade: process-global init, standalone role→provider resolution, and store-dir path helpers."

[lints]
workspace = true

[dependencies]
tars-types = { path = "../tars-types" }
tars-config = { path = "../tars-config" }
tars-provider = { path = "../tars-provider" }
# resilience.rs bridges the `[resilience]` config onto the pipeline's knobs.
tars-pipeline = { path = "../tars-pipeline" }

thiserror.workspace = true
# paths.rs hashes the canonical root for the tars-home store-dir fallback.
sha2.workspace = true

[dev-dependencies]
tempfile = "3"
