[package]
name = "tars-melt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Telemetry init (tracing subscriber + format + future OTel) — Doc 08."

[lints]
workspace = true

[dependencies]
# tars-types brings only the `env::` module here — see lib.rs's
# `from_verbosity` for the single use site. We accept the edge
# because tars-types is the workspace's universal-foundation crate;
# centralising every env-var read (ARC-L5-COH-18) is worth it.
tars-types = { path = "../tars-types" }

tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true

# `event/` module — the read-able E-pillar stores (PipelineEventLog +
# LlmRecordStore), moved here from tars-storage (Doc 17 §7). These deps
# back the SQLite impls; mirror tars-storage's non-optional usage.
tokio.workspace = true
async-trait.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
# Record bytes for LlmRecordStore.
bytes.workspace = true

# OTLP trace export (B-8 / M5 observability). Opt-in: the `otlp` feature
# pulls a heavy tonic/grpc/prost stack, so it's OFF by default — only
# builds that actually export traces pay for it. Enabling the feature +
# setting `OTEL_EXPORTER_OTLP_ENDPOINT` turns export on at runtime.
opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "metrics"], optional = true }
tracing-opentelemetry = { version = "0.28", optional = true }

[features]
default = []
# Compile the OpenTelemetry OTLP span exporter + tracing→OTel bridge.
otlp = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]

[dev-dependencies]
# UUIDs in the pipeline_event_log store tests.
uuid = { workspace = true }
# The in-memory span/metric exporters used by the otlp bridge tests.
# Only pulled when the `otlp` feature is active (tests are
# `#[cfg(feature = "otlp")]`). tokio drives the metrics PeriodicReader.
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "testing"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
