[package]
name = "tars-model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "The domain model: the Agent abstraction + its vocabulary (Doc 20). Pure contracts, zero implementation."

[lints]
workspace = true

[dependencies]
tars-types = { path = "../tars-types" }

async-trait.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
