[package]
name = "tars-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Middleware pipeline framework for the TARS Runtime (Doc 02)"

[lints]
workspace = true

[dependencies]
tars-types = { path = "../tars-types" }
tars-provider = { path = "../tars-provider" }
tars-cache = { path = "../tars-cache" }

# Async
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
futures.workspace = true
async-stream.workspace = true

# Errors / tracing
thiserror.workspace = true
tracing.workspace = true

# Cache policy serialization (read from RequestContext.attributes)
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "test-util"] }
serde_json.workspace = true
wiremock.workspace = true
tars-config = { path = "../tars-config" }
tracing-subscriber.workspace = true
