[package]
name = "tars-provider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "LLM Provider trait + HTTP/CLI/embedded backends (Doc 01)"

[lints]
workspace = true

[features]
# AWS Bedrock backend (Doc 31). Off by default so the heavy AWS SDK
# subtree never enters a build that doesn't ask for Bedrock; enabling it
# pulls in the `tars-bedrock` leaf crate, and the registry's Bedrock build
# arm is `#[cfg(feature = "bedrock")]`.
bedrock = ["dep:tars-bedrock"]

[dependencies]
tars-types = { path = "../tars-types" }
tars-sandbox = { path = "../tars-sandbox" }
tars-config = { path = "../tars-config" }
# Optional: only linked when the `bedrock` feature is on (see [features]).
# tars-bedrock is a LEAF (depends only on tars-types), so this edge does
# not cycle — the `impl LlmProvider` bridge lives here in `backends::bedrock`.
tars-bedrock = { path = "../tars-bedrock", optional = true }

# Async
tokio = { workspace = true, features = ["fs"] }
tokio-util.workspace = true
async-trait.workspace = true
futures.workspace = true
async-stream.workspace = true
pin-project-lite.workspace = true
bytes.workspace = true

# Serde
serde.workspace = true
serde_json.workspace = true

# HTTP / SSE
reqwest.workspace = true
eventsource-stream.workspace = true
url.workspace = true
httpdate = "1"

# Errors / tracing
thiserror.workspace = true
tracing.workspace = true

# Signal-time child reaper: SIGKILL the spawned claude process groups when
# the host is terminated by SIGINT/SIGTERM (kill_on_drop only covers the
# graceful path). See `child_reaper`. `nix` gives a SAFE `killpg` wrapper so
# we don't need an `unsafe` FFI block (the workspace forbids `unsafe_code`).
[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", default-features = false, features = ["signal"] }

[dev-dependencies]
tars-utils = { path = "../tars-utils" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "test-util"] }
wiremock.workspace = true
serde_json.workspace = true
which = "6"
futures.workspace = true
