[package]
name = "tars-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Agent Runtime — Trajectory + AgentEvent + Runtime trait (Doc 04 + Doc 14 §9)."

[lints]
workspace = true

[dependencies]
tars-types = { path = "../tars-types" }
tars-storage = { path = "../tars-storage" }

# Async
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Identifiers
uuid.workspace = true

# Idempotency-key hashing
sha2.workspace = true

# Errors / tracing
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"
