[package]
name = "tars-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Persistent stores for the TARS Runtime — EventStore (M3), ContentStore + KVStore (later)."

[lints]
workspace = true

[dependencies]
tars-types = { path = "../tars-types" }

# Async
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Persistence
rusqlite.workspace = true

# Body bytes for BodyStore (B-20.W3 enabler)
bytes.workspace = true

# Event UUIDs in PipelineEventStore queries
uuid.workspace = true

# XDG path resolution for default file locations
dirs.workspace = true

# Errors / tracing
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"
