[package]
name = "tars-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Tool trait + ToolRegistry + built-in tools (Doc 05)."

[lints]
workspace = true

[dependencies]
tars-types = { path = "../tars-types" }

# Async
tokio = { workspace = true, features = ["fs"] }
tokio-util.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Errors / tracing
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"
